--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -58,6 +58,10 @@
       <Project>{72DD968A-2B97-4D3D-8A87-80A76C6C830A}</Project>
       <Name>Alba.CsCss</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Alba.Framework\Alba.Framework\Alba.Framework.csproj">
+      <Project>{62730B23-450C-4B93-8D5C-F7037DB6D263}</Project>
+      <Name>Alba.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
