nsCSSPropList conversion WIP (CSS_PROP #defines parsed to list)

--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -45,6 +45,9 @@
     <Compile Include="nsCSSToken.cs" />
     <Compile Include="nsCSSTokenType.cs" />
     <Compile Include="nsStyleUtil.cs" />
+    <Compile Include="Original\nsCssPropList.conv.cs">
+      <DependentUpon>nsCSSPropList.tt</DependentUpon>
+    </Compile>
     <Compile Include="Original\nsCSSScanner.conv.cs">
       <DependentUpon>nsCSSScanner.tt</DependentUpon>
     </Compile>
@@ -54,6 +57,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Original\nsCSSPropList.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>nsCSSPropList.h</DependentUpon>
+    </None>
     <None Include="Original\nsCSSScanner.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <AutoGen>True</AutoGen>
@@ -63,6 +72,10 @@
     <None Include="T4\Common.ttinclude" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Original\nsCSSPropList.h">
+      <Generator>AttachT4</Generator>
+      <LastGenOutput>nsCSSPropList.tt</LastGenOutput>
+    </Content>
     <Content Include="Original\nsCSSScanner.cpp">
       <Generator>AttachT4</Generator>
       <LastGenOutput>nsCSSScanner.tt</LastGenOutput>
