--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -36,6 +36,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ErrorReporter.cs" />
+    <Compile Include="Extensions\DictionaryExts.cs" />
+    <Compile Include="Extensions\EnumerableExts.cs" />
     <Compile Include="Extensions\StringBuilderExts.cs" />
     <Compile Include="Extensions\StringExts.cs" />
     <Compile Include="Gfx\gfxFontFeature.cs" />
@@ -55,6 +57,7 @@
       <DependentUpon>gfxFontConstants.tt</DependentUpon>
     </Compile>
     <Compile Include="Gfx\Side.cs" />
+    <Compile Include="nsCSSKeywords.cs" />
     <Compile Include="nsCSSScanner.cs" />
     <Compile Include="nsCSSToken.cs" />
     <Compile Include="nsCSSTokenType.cs" />
@@ -62,6 +65,12 @@
     <Compile Include="nsStyleUtil.cs" />
     <Compile Include="Original\nsCSSFontDesc.g.cs">
       <DependentUpon>nsCSSFontDescList.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Original\nsCSSKeyword.g.cs">
+      <DependentUpon>nsCSSKeywordList.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Original\nsCSSKeywords.g.cs">
+      <DependentUpon>nsCSSKeywordList.tt</DependentUpon>
     </Compile>
     <Compile Include="Original\nsCSSProperty.g.cs">
       <DependentUpon>nsCSSPropList.tt</DependentUpon>
@@ -98,6 +107,13 @@
       <DependentUpon>nsCSSFontDescList.h</DependentUpon>
     </None>
     <None Include="Original\nsCSSFontDescList.ttinclude" />
+    <None Include="Original\nsCSSKeywordList.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>nsCSSKeywordList.h</DependentUpon>
+    </None>
+    <None Include="Original\nsCSSKeywordList.ttinclude" />
     <None Include="Original\nsCSSPropAliasList.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <AutoGen>True</AutoGen>
@@ -161,6 +177,12 @@
     <None Include="Original\nsStyleConsts.h">
       <Generator>AttachT4</Generator>
       <LastGenOutput>nsStyleConsts.tt</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Original\nsCSSKeywordList.h">
+      <Generator>AttachT4</Generator>
+      <LastGenOutput>nsCSSKeywordList.tt</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(SolutionDir)\Build\Common.targets" Condition="Exists('$(SolutionDir)\Build\Common.targets')" />
