Moved classes from Alba.CsCss ns to Alba.CsCss.Style ns

--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="nsCSSScannerTests.cs" />
+    <Compile Include="Style\nsCSSScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
