nsCSSParser conversion WIP (2139 errors left)

--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\ListExts.cs" />
+    <Compile Include="Extensions\ObjectExts.cs" />
     <Compile Include="Style\ErrorReporter.cs" />
     <Compile Include="Extensions\DictionaryExts.cs" />
     <Compile Include="Extensions\EnumerableExts.cs" />
