--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Extensions\ArrayExts.cs" />
     <Compile Include="Extensions\ListExts.cs" />
     <Compile Include="Extensions\ObjectExts.cs" />
+    <Compile Include="Internal\ReferenceEqualityComparer.cs" />
     <Compile Include="Style\ErrorReporter.cs" />
     <Compile Include="Extensions\DictionaryExts.cs" />
     <Compile Include="Extensions\EnumerableExts.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Style\nsCSSKeywords.cs" />
     <Compile Include="Style\nsCSSParser.cs" />
     <Compile Include="Style\nsCSSProps.cs" />
+    <Compile Include="Style\nsCSSPseudoClasses.cs" />
     <Compile Include="Style\nsCSSScanner.cs" />
     <Compile Include="Style\nsCSSToken.cs" />
     <Compile Include="Style\nsCSSTokenType.cs" />
@@ -90,6 +92,12 @@
     </Compile>
     <Compile Include="Style\Original\nsCSSPropH.conv.cs">
       <DependentUpon>nsCSSPropsH.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Style\Original\nsCSSPseudoClass.g.cs">
+      <DependentUpon>nsCSSPseudoClassList.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Style\Original\nsCSSPseudoClasses.g.cs">
+      <DependentUpon>nsCSSPseudoClassList.tt</DependentUpon>
     </Compile>
     <Compile Include="Style\Original\nsCSSScanner.conv.cs">
       <DependentUpon>nsCSSScanner.tt</DependentUpon>
@@ -174,6 +182,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>nsCSSPropsH.h</DependentUpon>
     </None>
+    <None Include="Style\Original\nsCSSPseudoClassList.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>nsCSSPseudoClassList.h</DependentUpon>
+    </None>
+    <None Include="Style\Original\nsCSSPseudoClassList.ttinclude" />
     <None Include="Style\Original\nsCSSScanner.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <AutoGen>True</AutoGen>
@@ -279,6 +294,13 @@
       <LastGenOutput>nsINameSpaceManager.tt</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Style\Original\nsCSSPseudoClassList.h">
+      <Generator>AttachT4</Generator>
+      <LastGenOutput>nsCSSPseudoClassList.tt</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(SolutionDir)\Build\Common.targets" Condition="Exists('$(SolutionDir)\Build\Common.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
